--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </style>
     
 
-    <a href="https://github.com/morapaola/destinoscaribe.github.io/blob/2dab5226976941f7eba077506abbe3bb8c8d9eed/index.html"><strong>Inicio</strong></a>
-    <a href="https://github.com/morapaola/destinoscaribe.github.io/blob/2a22acb283646749d3a2d35a6e2ba666cd363883/sobre%20nosotros"</strong> </a>
-    <a href="https://github.com/morapaola/destinoscaribe.github.io/blob/2a22acb283646749d3a2d35a6e2ba666cd363883/reservaciones"> <strong>Reservaciones</strong></a>
+    <a href="https://github.com/morapaola/destinoscaribe.github.io/blob/2dab5226976941f7eba077506abbe3bb8c8d9eed/index.html", id= "inicio"><strong>Inicio</strong></a>
+    <a href="https://github.com/morapaola/destinoscaribe.github.io/blob/2a22acb283646749d3a2d35a6e2ba666cd363883/sobre%20nosotros", id= "sobre nosotros"></strong> </a>
+    <a href="https://github.com/morapaola/destinoscaribe.github.io/blob/2a22acb283646749d3a2d35a6e2ba666cd363883/reservaciones", id="reservaciones" > <strong>Reservaciones</strong></a>
     <a href="https://github.com/morapaola/destinoscaribe.github.io/blob/2a22acb283646749d3a2d35a6e2ba666cd363883/contacto", id="contacto"><strong>Contacto</strong></a>
         <div id="limon">
            
