--- a/reservaciones.html
+++ b/reservaciones.html
@@ -42,10 +42,10 @@
             }
         </style>
     
-    <a href="https://github.com/morapaola/destinoscaribe.github.io/blob/008251bbe4dd7b5de4653e78bc5d58468c986362/inicio"><strong>Inicio</strong></a>
-    <a href="https://github.com/morapaola/destinoscaribe.github.io/blob/2a22acb283646749d3a2d35a6e2ba666cd363883/sobre%20nosotros", id="sobre_nosotros"> <strong>Sobre nosotros</strong> </a>
-    <a href="https://github.com/morapaola/destinoscaribe.github.io/blob/2a22acb283646749d3a2d35a6e2ba666cd363883/reservaciones", id="reservaciones"> <strong>Reservaciones</strong></a>
-    <a href="https://github.com/morapaola/destinoscaribe.github.io/blob/2a22acb283646749d3a2d35a6e2ba666cd363883/contacto", id="contacto"><strong>Contacto</strong></a>
+            <a href="destinos-caribe-cr.html" id="inicio"><strong>Inicio</strong></a>
+            <a href="Sobre%20nosotros.html" id="sobre_nosotros"> <strong>Sobre nosotros</strong> </a>
+            <a href="Reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
+            <a href="Contacto.html" id="contacto"><strong>Contacto</strong></a>
 <div id="pagina">
     <ul>
         <li>
