--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
     <a href="destinos-caribe-cr.html" id="inicio"><strong>Inicio</strong></a>
     <a href="sobre-nosotros.html" id="sobre_nosotros"> <strong>Sobre nosotros</strong> </a>
-    <a href="Reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
-    <a href="Contacto.html" id="contacto"><strong>Contacto</strong></a>
+    <a href="reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
+    <a href="contacto.html" id="contacto"><strong>Contacto</strong></a>
         <div id="limon">
            
             <h1> Destinos Caribe CR
