--- a/reservaciones.html
+++ b/reservaciones.html
@@ -42,10 +42,10 @@
             }
         </style>
     
-            <a href="destinos-caribe-cr.html" id="inicio"><strong>Inicio</strong></a>
-            <a href="Sobre%20nosotros.html" id="sobre_nosotros"> <strong>Sobre nosotros</strong> </a>
-            <a href="Reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
-            <a href="Contacto.html" id="contacto"><strong>Contacto</strong></a>
+        <a href="destinos-caribe-cr.html" id="inicio"><strong>Inicio</strong></a>
+        <a href="sobre-nosotros.html" id="sobre_nosotros"> <strong>Sobre nosotros</strong> </a>
+        <a href="reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
+        <a href="contacto.html" id="contacto"><strong>Contacto</strong></a>
 <div id="pagina">
     <ul>
         <li>
