--- a/index.html
+++ b/index.html
@@ -66,5 +66,5 @@
    
        <img src = "Imágenes/20190608-142054-Costa-Rica-Cahuita-Playa-Parque-Nacional-IMG_0491-L3-960x640.jpeg" alt="Playa negra en puerto viejo de talamanca limón cr" width="400px">
        <img src = "Imágenes/dougdo_playa-negra-almost-empty.jpg" alt="Playa Puerto Vargas en el Parque Nacional Cahuita, Limón, CR" width="400px">
-       <img src = "C:\Users\morap\OneDrive\Escritorio\Destinos CaribeCR\Info\Imágenes\Slyder\PUERTOVARGAS8.jpg" alt = "Playa Blanca en el Parque Nacional Cahuita, Limón, Costa Rica" width="400px"> 
+       <img src = "Imágenes/PUERTOVARGAS8.jpg" alt = "Playa Blanca en el Parque Nacional Cahuita, Limón, Costa Rica" width="400px"> 
         </div>
