--- a/contacto.html
+++ b/contacto.html
@@ -3,59 +3,27 @@
     <head>
         <meta charset="utf-8">
         <title>Contacto</title>
+        <link rel="stylesheet" href= "encabezado.html" type="text/css" media="screen">
  
     </head>
     <body>
-        <style>
-            #inicio {
-                position: absolute;
-                top: 15px;
-                left: 10px;
-                color: black;
-                text-decoration: none;
-            }
-            #sobre_nosotros {
-                position: absolute;
-                top: 15px;
-                left: 100px;
-                color: black;
-                text-decoration: none;
-            }
-            #reservaciones {
-                position: absolute;
-                top: 15px;
-                left: 300px; 
-                color: black;
-                text-decoration: none;
-            }
-            #contacto {
-                position: absolute;
-                top: 15px;
-                left: 500px;
-                color: black;
-                text-decoration: none;
-            } 
-            #formulario{
-                position: absolute;
-                top: 40px;
-            }
-            </style>
-        <a href="destinos-caribe-cr.html" id="inicio"><strong>Inicio</strong></a>
-        <a href="sobre-nosotros.html" id="sobre_nosotros"> <strong>Sobre nosotros</strong> </a>
-        <a href="reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
-        <a href="contacto.html" id="contacto"><strong>Contacto</strong></a>
             <div id="formulario">
                 <form action="C:\Users\morap\OneDrive\Escritorio\Destinos CaribeCR\Info" method="post">
-                    <ul>
+                        <div id= "usuario"> 
                        <label for="name">Nombre:</label>
-                       <input type="text" id="name" name="nombre de usuario">
+                       <input type="text" id="name" name="nombre de usuario"> <br>
+                    </div>
+                    <div id="correo">
                        <label for="mail">Correo electrónico:</label>
-                       <input type="email" id="mail" name="correo electrónico">
+                       <input type="email" id="mail" name="correo electrónico"> <br>
+                    </div>
+                    <div id="texto">
                        <label for="msg">Mensaje:</label>
-                       <textarea id="msg" name="escriba aquí"></textarea>
-                    </ul>
+                       <textarea id="msg" name="escriba aquí"></textarea> <br>
+                    </div>
+
                     <class="button">
-                        <button type="submit">Enviar</button>
+                        <button type="submit" id="enviar">Enviar</button>
                    </form>
             </div>
             
