--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -3,52 +3,22 @@
     <head>
         <meta charset="utf-8">
         <title>Sobre nosotros</title>
- 
+        <link rel="STYLESHEET" type="text/css" href="estilo.css">
     </head>
     <body>
-        <style>
-            #inicio {
-                position: absolute;
-                top: 15px;
-                left: 10px;
-                color: black;
-                text-decoration: none;
-            }
-            #sobre_nosotros {
-                position: absolute;
-                top: 15px;
-                left: 100px;
-                color: black;
-                text-decoration: none;
-            }
-            #reservaciones {
-                position: absolute;
-                top: 15px;
-                left: 300px; 
-                color: black;
-                text-decoration: none;
-            }
-            #contacto {
-                position: absolute;
-                top: 15px;
-                left: 500px;
-                color: black;
-                text-decoration: none;
-            } 
-            #quienes_somos {
-                position: absolute;
-                top: 30px;
+        <h1 id="encabezado"> Destinos Caribe CR <br>
+        <span id="subtitulo">
+        La mejor opción
+        </span>
+         </h1>
+        <div id="barra">
+            <a href="destinos-caribe-cr.html" id="inicio"><strong>Inicio</strong></a>
+            <a href="sobre-nosotros.html" id="sobre_nosotros"> <strong>Sobre nosotros</strong> </a>
+            <a href="reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
+            <a href="contacto.html" id="contacto"><strong>Contacto</strong></a>
+        </div>
 
-            }
-        </style>
-    
-
-    <a href="destinos-caribe-cr.html" id="inicio"><strong>Inicio</strong></a>
-    <a href="sobre-nosotros.html" id="sobre_nosotros"> <strong>Sobre nosotros</strong></a>
-    <a href="reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
-    <a href="contacto.html" id="contacto"><strong>Contacto</strong></a>
-        
-        <div id="quienes_somos">
+        <div style="color: #002E5D;">
             <h1>
                 ¿Quiénes somos?
             </h1>
