--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -12,7 +12,7 @@
         </span>
          </h1>
         <div id="barra">
-            <a href="destinos-caribe-cr.html" id="inicio"><strong>Inicio</strong></a>
+            <a href="index.html" id="inicio"><strong>Inicio</strong></a>
             <a href="sobre-nosotros.html" id="sobre_nosotros"> <strong>Sobre nosotros</strong> </a>
             <a href="reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
             <a href="contacto.html" id="contacto"><strong>Contacto</strong></a>
