--- a/contacto.html
+++ b/contacto.html
@@ -3,50 +3,23 @@
     <head>
         <meta charset="utf-8">
         <title>Contacto</title>
-
+        <link rel="STYLESHEET" type="text/css" href="estilo.css">
  
     </head>
     <body>
   <style>
-#inicio {
-    position: absolute;
-    top: 15px;
-    left: 10px;
-    color: black;
-    text-decoration: none;
-}
-#sobre_nosotros {
-    position: absolute;
-    top: 15px;
-    left: 100px;
-    color: black;
-    text-decoration: none;
-}
-#reservaciones {
-    position: absolute;
-    top: 15px;
-    left: 300px; 
-    color: black;
-    text-decoration: none;
-}
-#contacto {
-    position: absolute;
-    top: 15px;
-    left: 500px;
-    color: black;
-    text-decoration: none;
-} 
+
 #formulario{
     position: absolute;
-    top: 200px;
-    background: #5dc1b9; 
+    top: 400px;
+    background:  #D2E3F9; 
     height: 150px;
     width: 200px;
 }
 #usuario {
     position: absolute;
     top: -50px;
-    background: #5dc1b9; 
+    background:  #D2E3F9; 
     height: 150px;
     width: 200px;
 }
@@ -62,19 +35,19 @@
     position: absolute;
     top: 120px;
 }            
-hr {
-    width: 2000px;
-    height: 30px;
-    color:#15EB91;
-    background-color:#15EB91 ;
-}
+
   </style>     
-
-
-<a href="destinos-caribe-cr.html" id="inicio"><strong>Inicio</strong></a>
-<a href="sobre-nosotros.html" id="sobre_nosotros"> <strong>Sobre nosotros</strong> </a>
-<a href="reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
-<a href="contacto.html" id="contacto"><strong>Contacto</strong></a>
+ <h1 id="encabezado"> Destinos Caribe CR <br>
+    <span id="subtitulo">
+    La mejor opción
+    </span>
+     </h1>
+<div id="barra">
+    <a href="index.html" id="inicio"><strong>Inicio</strong></a>
+    <a href="sobre-nosotros.html" id="sobre_nosotros"> <strong>Sobre nosotros</strong> </a>
+    <a href="reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
+    <a href="contacto.html" id="contacto"><strong>Contacto</strong></a>
+</div>
             <div id="formulario">
                 <form action="C:\Users\morap\OneDrive\Escritorio\Destinos CaribeCR\Info" method="post">
                         <div id= "usuario"> 
@@ -94,4 +67,5 @@ hr {
                         <button type="submit" id="enviar">Enviar</button>
                    </form>
             </div>
+            </body>
             
