--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <a href="reservaciones.html" id="reservaciones"> <strong>Reservaciones</strong></a>
           <a href="contacto.html" id="contacto"><strong>Contacto</strong></a>
             </div>
-            <img src = "playanegra.jpeg" alt="Playa negra en puerto viejo de talamanca limón cr" width="400px">
-            <img src = "puertovargas.jpg" alt = "Playa Blanca en el Parque Nacional Cahuita, Limón, Costa Rica" width="400px"> 
+            <img src = "imagenes\playanegra.jpeg" alt="Playa negra en puerto viejo de talamanca limón cr" width="400px">
+            <img src = "imagenes\puertovargas.jpg" alt = "Playa Blanca en el Parque Nacional Cahuita, Limón, Costa Rica" width="400px"> 
         <div id="texto">
            
         <h2> ¿Cómo es Limón?
