--- a/reservaciones.html
+++ b/reservaciones.html
@@ -38,7 +38,7 @@
     <h3 id= "lanna-ban">
     Lanna Ban Hotel
     </h3>
-    <img src = "lannahotel.jpg", alt = "Habitación Lanna Ban Hotel", width="400px">
+    <img src = "imagenes\lannahotel.jpg", alt = "Habitación Lanna Ban Hotel", width="400px">
     <p>
     El Lanna Ban Hotel está situado en Puerto Viejo y dispone de acceso directo a la playa. Ofrece conexión WiFi gratuita, jardín exótico y arquitectura tailandesa contemporánea.
     </p>
@@ -55,7 +55,7 @@
     <h3 id="villas-caribe">
     Villas del Caribe
     </h3>
-    <img src="villascaribe.jpg", alt="Habitación Villas del Caribe", width="400px">
+    <img src="imagenes\villascaribe.jpg", alt="Habitación Villas del Caribe", width="400px">
     <p>
     Las Villas del Caribe se encuentran en Puerto Viejo, a 300 metros de la playa Chiquita, y ofrecen alojamiento con restaurante, aparcamiento privado gratuito, piscina al aire libre y bar. Se encuentra a 1,6 km del centro de rescate Jaguar y dispone de jardín y terraza. Hay servicio de habitaciones y WiFi gratuita en todas las instalaciones.
     </p>
@@ -73,7 +73,7 @@
     <h3 id= "umami">
     Umami Hotel
     </h3>
-    <img src= "umamihotel.jpg" , alt="Vista desde arriba Unami Hotel", width="350px">
+    <img src= "imagenes\umamihotel.jpg" , alt="Vista desde arriba Unami Hotel", width="350px">
     <p>
     A 5 minutos de la playa, UMAMI Hotel Graden Spa le ofrece un servicio de calidad con una decoración fresca y minimalista de color blanco con acabados en coral y madera
     </p>
@@ -81,7 +81,7 @@
     <h3 id= "coco-loco">
     Coco Loco Lodge Hotel Bungalows
     </h3>
-    <img src="cocolocohotel.jpg", alt="Piscina Coco Loco Lodge Hotel Bungalows", width="350px">
+    <img src="imagenes\cocolocohotel.jpg", alt="Piscina Coco Loco Lodge Hotel Bungalows", width="350px">
     <p>
     El Coco Loco Lodge se encuentra en Puerto Viejo, a 70 metros de la playa Negra, y ofrece alojamiento con piscina al aire libre, aparcamiento privado gratuito, salón compartido y jardín. Ofrece habitaciones familiares y zona de barbacoa. El alojamiento ofrece recepción 24 horas, servicio de enlace con el aeropuerto, cocina compartida y conexión WiFi gratuita en todas las instalaciones.
     
@@ -96,7 +96,7 @@
     <h3 id= "rocking">
     Rocking J's
     </h3>
-    <img src="rocking.jpg", alt= "Entrada Rocking J's", width="300px". height="250">
+    <img src="imagenes\rocking.jpg", alt= "Entrada Rocking J's", width="300px". height="250">
     <p>
     El Rocking J's se encuentra justo en la playa Salsa Brava, en Puerto Viejo, y cuenta con un bar restaurante y exuberantes jardines. Este albergue artístico dispone de WiFi gratuita y cocina y salón de TV compartidos.
     
